Fixed overflow issue

--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 body {
+    margin: 0;
+    padding: 0;
     font-family: 'Bebas Neue', sans-serif;
     font-family: 'Montserrat', sans-serif;
-    margin: 0;
     overflow-x: hidden;
     background-color: rgb(37, 36, 36);
-}
+  }
+  
 
 header {
     display: flex;
@@ -12,6 +14,8 @@ header {
     align-items: center;
     background-color: rgb(73, 72, 72);
     width: 100%;
+    overflow-x: hidden;
+
 }
 
 header img {
@@ -39,6 +43,8 @@ header section {
     flex-direction: column;
     align-items: center;
     color: white;
+    overflow-x: hidden;
+
 }
 
 
@@ -86,10 +92,6 @@ footer {
 
 @media screen and (max-width: 991px) {
 
-
-    header {
-        overflow-x: hidden;
-      } 
 
     header img {
         height: 22vw;
